Fixed spacing issue in categories

--- a/site/src/main/webapp/css/web-components-global-styles.css
+++ b/site/src/main/webapp/css/web-components-global-styles.css
@@ -39,6 +39,6 @@ paper-tabs paper-tab::shadow #ink {
 	display:inline-block;
 	margin-right:18px;
 }
-.product-list li:nth-child(5n) {
+.product-list li:nth-child(4n+1) {
 	margin-right:0px;
 }
